# ExCLucene

./: Apache v2 License.license  CMakeLists.txt  README
src/: .cproject
src/contribs/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/contribs-lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/contribs-lib/CLucene/benchCompression/: Array.cpp  Array.h  CodecFactory.cpp  CodecFactory.h  Delta.h  DeltaFactory.h  HorizontalAVXUnpacker.h  HorizontalAVXUnpackerIMP.h  HorizontalSSEUnpacker.h  HorizontalSSEUnpackerIMP.h  HorizontalScalarUnpacker.h  HorizontalScalarUnpackerIMP.h  IndexInfo.h  IndexLoader.cpp  IndexLoader.h  IntegerCodec.h  IntegerUnpacker.h  LinearRegression.h  LinearRegressionIMP.h  (+40 more)
src/contribs/benchmarker/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/contribs/contribs-lib-test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TestHighlight.cpp  cmake_install.cmake  contribTests.cpp  test.h  testall.cpp
src/contribs/readindex/: BlockCodecs.cpp  BlockCodecs.hpp  CMakeLists.txt  Grammar.hpp  IOUtils.hpp  IntegrationOfReaderAndPISEQUENTIAL.cpp  IntegrationOfReaderAndPISEQUENTIAL.hpp  ListPtr.hpp  OptimizeSeg.hpp  PISequential_Seg.cpp  SortComp.hpp  Utils.hpp  main.cpp
src/contribs/readindex/include/: Array.hpp  BlockCodecs.hpp  Compress.hpp  ConjuncQuery.hpp  FileNSpace.hpp  Grammar.hpp  IOUtils.hpp  Queries.hpp  SegBlock.hpp  SortComp.hpp  Utils.hpp
src/contribs/searching/: CMakeLists.txt  CTestTestfile.cmake  InputParameters.cpp  InputParameters.h  Makefile  OutputMeasurement.cpp  OutputMeasurement.h  SearchTest.cpp  SearchTest.h  SortedBySomething.h  cmake_install.cmake  main.cpp
src/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/demo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ext/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gpu/Compressed/: log.txt  make.sh  run.sh
src/gpu/HS_SegLRC+HS_PFD/: lr_diff_block.h  lr_diff_block_implement.h
src/shared/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/wand/: .CreateWandData.cpp.swp  BMWQuery.cpp  BMWQuery.h  CMakeLists.txt  CreateWandData.cpp  ListPtr.h  ListPtr_B.h  WandQuery.cpp  WandQuery.h  common.h  example.cpp  factory.h  querybase.h  type.h
text_process/: .classpath  .project  README
text_process/src/: CluewebParse.java  Gov2Parse.java  HtmlParser.java  HtmlParser_add.java  MainParser.java  QueryParse.java  URLParse.java  clueweb09parse.sh
(+138 files in other folders)
